// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> renders default 1`] = `
.c0 {
  padding: 0.5rem 1rem 0 0;
}

<List__ListItem>
  <li
    className="c0"
  />
</List__ListItem>
`;

exports[`<ListItem /> renders with theme 1`] = `
.c0 {
  padding: 0.5rem 1rem 0 0;
  color: #8d8d8d;
}

<List__ListItem
  theme={
    Object {
      "bg": "#000",
      "bgAdd": "#202124",
      "color": "#fff",
      "colorAdd": "#8d8d8d",
      "shadow": "none",
    }
  }
>
  <li
    className="c0"
  />
</List__ListItem>
`;

exports[`renders default <List /> 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  width: 60%;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

<ul
  className="c0"
/>
`;

exports[`renders default <Menu /> 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  width: 60%;
  margin: 0;
  padding: 0;
  list-style-type: none;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 100%;
  text-transform: uppercase;
}

@media screen and (min-width:40rem) {
  .c0 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

<ul
  className="List-f451ab-0 c0"
/>
`;
